new design changes
added a circle that follows around the cursor.

change the flavicon of the website

renamed the website

changed highlighting text from default to white and changed text to black

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 
         <link rel="stylesheet" href="style.css">
         <script defer src="app.js"></script>
-        <link rel="shortcut icon" type="image/x-icon" href="https:xvideos.com/favicon.ico" />
-        <title>I Wanna Fuck You</title>
+        <link rel="shortcut icon" type="image/heart" href="images/icon-heart.png" />
+        <title>My love...</title>
         
     </head>
 
     <body>
+
+    <div class='cursor' id="cursor"></div> 
 
         <section class="title">
 
