Added rainbow text to title and added github and linkedin  links
new additions

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
         <section class="title">
 
-            <h1>I got a secret to tell you...</h1>
-            <p> yo i love you dawg</p>
-
+            <h3 class="animate-charcter">I got a secret to tell you...</h3>
+            
         </section>
 
         <p></p>
@@ -50,6 +49,18 @@
             <h2 class="latetext">no cap you been looking good</h2>
             <p class="latetext">keep up the grind my guy</p>
         </section>
+
+        <style>
+
+        </style>
+        <div class="bottomdiv">
+            
+            <div class="icon">
+                <a href="https://www.linkedin.com/in/ernestas-garipovas-2b9578248/"><img src="images/linkedin-icon.png"></a>
+                <a href="https://github.com/ErnestGari" target="_blank"><img src="images/github-icon.png"></a>
+            </div>
+        </div>
+
 
     </body>
 </html>
