--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="bottomdiv">
             
             <div class="icon">
-                <a href="https://www.linkedin.com/in/ernestas-garipovas-2b9578248/"><img src="images/linkedin-icon.png"></a>
+                <a href="https://www.linkedin.com/in/ernestas-garipovas-2b9578248/" target="_blank"><img src="images/linkedin-icon.png"></a>
                 <a href="https://github.com/ErnestGari" target="_blank"><img src="images/github-icon.png"></a>
             </div>
         </div>
