--- a/index.html
+++ b/index.html
@@ -62,12 +62,24 @@
                     <span class="link-text">LinkedIn</span>
                 </a>
             </li>
-            <li>
-            <!-- Will add light mode icons here-->
+            <li class="nav-item">
+                <button onclick="lightMode()" class="nav-link">
+                <svg 
+                aria-hidden="true"
+                focusable="false"
+                data-prefix="fad"
+                role="img"
+                xmlns="http://www.w3.org/2000/svg" 
+                viewBox="0 0 384 512">
+                <path 
+                fill ="currentColor"
+                d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"/></svg>
+                <span class="link-text">Change Theme</span>
+            </button>
             </li>
         </ul>
     </nav>
-
+    <main>
         <section class="title">
 
             <h3 class="animate-charcter">I got a secret to tell you...</h3>
@@ -77,7 +89,7 @@
         <p></p>
 
         
-    <main>
+    
         <section class="hidden">
             <h2>Bruh I wanted to say this for a really long time...</h2>
             <p>
@@ -107,20 +119,5 @@
         </section>
 
     </main>
-
-        <script>
-            function changeImage()
-            {
-                var img = document.getElementById("image");
-
-                if (img.src.match("images/light-modes.png")) {
-                    img.src = "images/sun-icon.png";
-                } else {
-                    img.src = "images/light-modes.png"
-                }
-
-            }  
-        </script>
-
     </body>
 </html>
