about me changes

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -86,7 +86,23 @@
             
         </section>
 
-        <p> I be like Naming Ernestas Garipovas I be programmin</p>
+        <p class="hidden"> I be like Naming Ernestas Garipovas I be programmin</p>
+        <p class="hidden">I just be like cool n stuff ya know i mean</p>
+
+
+
+
+        <section class="pics">
+            <div class="hidden">
+                <img src="images/FUNY.jpg">
+                <h2> cute pic of me</h2>
+                <p>HAHAHAHAHAHHHHHHHHHHAHAAHAHAHAHAHAHHHHHHHHHHAHAAHAHAHAHAHAHHHHHHHHHHAHAA
+                HAHAHAHAHAHHHHHHHHHHAHAAHAHAHAHAHAHHHHHHHHHHAHAAHAHAHAHAHAHHHHHHHHHHAHAA
+                funy
+            </p>
+            </div>
+            
+        </section>
 
     </main>
     </body>
